--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-state-map/cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "CLI tool to visualize React state flow through static analysis",
   "type": "module",
   "license": "MIT",
@@ -15,7 +15,7 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp src/renderers/dagre.bundle.js dist/renderers/",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "start": "node dist/index.js"
