--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc && cp src/renderers/dagre.bundle.js src/renderers/elk.bundle.js dist/renderers/",
+    "build": "tsc && cp src/renderers/dagre.bundle.js src/renderers/elk.bundle.js src/renderers/cytoscape.bundle.js dist/renderers/",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "start": "node dist/index.js"
@@ -23,7 +23,8 @@
   "dependencies": {
     "@react-state-map/core": "workspace:*",
     "chokidar": "^3.5.3",
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "cytoscape": "^3.30.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
